fixed footer and contact icons

--- a/css/milestone.css
+++ b/css/milestone.css
@@ -128,14 +128,25 @@ header nav ul li a {
 	line-height: 35px;
 	text-align: center;
 }
-#contact img { 
-	display: inline-block; 
-	margin-left: 50px; /*****come back and adjust*****/
+#contact ul {
+    list-style: none;
 }
-footer p {
+#contact ul li {
+    display: inline-block;
+}
+#contact ul img {
+    font-size: 32px;
+    padding-right: 30px;
+    padding-left:25px;
+}
+footer {
+	height:50px;
+	border:3px #ff654a solid;
+	margin: 0 auto;
+	clear: both;
+	text-align:center; 
 	color:#ffffff;
-	font-size: 18px; 
-	font-family: 'Open Sans', sans-serif;
-	text-align:center;
+	font-size:18px;
+	font-family:'Open Sans', sans-serif;
 }
 /*****fix footer issue*****/
